fdo#58029 - substantially accelerate re-rendering of complex forms

Some writer VCL Windows appear to have thousands of children. Remove
an N^2 in handling them, and let VCL do the job instead. i#103611
continues to stay fixed for simpler code.

Change-Id: I63ddc0647f22c7e60feaaff6b795712c04693c05